--- a/oily-giant.ipynb
+++ b/oily-giant.ipynb
@@ -82,7 +82,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O arquivo CSV não foi encontrado em geo_data_0.csv. Tentando o caminho ./datasets/geo_data_0.csv...\n",
+      "O arquivo CSV não foi encontrado em geo_data_1.csv. Tentando o caminho ./datasets/geo_data_1.csv...\n",
+      "O arquivo CSV não foi encontrado em geo_data_2.csv. Tentando o caminho ./datasets/geo_data_2.csv...\n"
+     ]
+    }
+   ],
    "source": [
     "# Carregue os arquivos de dados em diferentes DataFrames\n",
     "\n",
@@ -92,9 +102,9 @@
     "local_geo_2_path = \"geo_data_2.csv\"\n",
     "\n",
     "# Cloud Path\n",
-    "geo_0_path = \"/datasets/geo_data_0.csv\"\n",
-    "geo_1_path = \"/datasets/geo_data_1.csv\"\n",
-    "geo_2_path = \"/datasets/geo_data_2.csv\"\n",
+    "geo_0_path = \"./datasets/geo_data_0.csv\"\n",
+    "geo_1_path = \"./datasets/geo_data_1.csv\"\n",
+    "geo_2_path = \"./datasets/geo_data_2.csv\"\n",
     "\n",
     "try:\n",
     "    geo_0 = pd.read_csv(local_geo_0_path, sep=\",\")\n",
